src/interp/snapshots/rsh__interp__parse__test__parser_for_loop.snap
---
source: src/interp/parse.rs
expression: flat_nodes
---
[
    Node {
        command: None,
        nd_type: For {
            loop_vars: [
                Tk {
                    tk_type: Ident,
                    wd: WordDesc {
                        text: "i",
                        span: Span {
                            start: 4,
                            end: 5,
                        },
                        flags: WdFlags(
                            0x0,
                        ),
                    },
                },
            ],
            loop_arr: [
                Tk {
                    tk_type: Ident,
                    wd: WordDesc {
                        text: "1",
                        span: Span {
                            start: 9,
                            end: 10,
                        },
                        flags: WdFlags(
                            0x0,
                        ),
                    },
                },
                Tk {
                    tk_type: Ident,
                    wd: WordDesc {
                        text: "2",
                        span: Span {
                            start: 11,
                            end: 12,
                        },
                        flags: WdFlags(
                            0x0,
                        ),
                    },
                },
                Tk {
                    tk_type: Ident,
                    wd: WordDesc {
                        text: "3",
                        span: Span {
                            start: 13,
                            end: 14,
                        },
                        flags: WdFlags(
                            0x0,
                        ),
                    },
                },
            ],
            loop_body: Node {
                command: None,
                nd_type: Root {
                    deck: [
                        Node {
                            command: Some(
                                Tk {
                                    tk_type: Ident,
                                    wd: WordDesc {
                                        text: "echo",
                                        span: Span {
                                            start: 18,
                                            end: 22,
                                        },
                                        flags: WdFlags(
                                            BUILTIN,
                                        ),
                                    },
                                },
                            ),
                            nd_type: Builtin {
                                argv: [
                                    Tk {
                                        tk_type: Ident,
                                        wd: WordDesc {
                                            text: "echo",
                                            span: Span {
                                                start: 18,
                                                end: 22,
                                            },
                                            flags: WdFlags(
                                                BUILTIN,
                                            ),
                                        },
                                    },
                                    Tk {
                                        tk_type: Ident,
                                        wd: WordDesc {
                                            text: "$i",
                                            span: Span {
                                                start: 23,
                                                end: 25,
                                            },
                                            flags: WdFlags(
                                                IS_ARG,
                                            ),
                                        },
                                    },
                                ],
                            },
                            span: Span {
                                start: 18,
                                end: 25,
                            },
                            flags: NdFlags(
                                VALID_OPERAND,
                            ),
                            redirs: [],
                        },
                    ],
                },
                span: Span {
                    start: 15,
                    end: 30,
                },
                flags: NdFlags(
                    0x0,
                ),
                redirs: [],
            },
        },
        span: Span {
            start: 0,
            end: 30,
        },
        flags: NdFlags(
            VALID_OPERAND | FOR_BODY,
        ),
        redirs: [],
    },
]
