src/interp/snapshots/rsh__interp__parse__test__parser_redirection_complex.snap
---
source: src/interp/parse.rs
expression: flat_nodes
---
[
    Node {
        command: Some(
            Tk {
                tk_type: Ident,
                wd: WordDesc {
                    text: "cat",
                    span: Span {
                        start: 0,
                        end: 3,
                    },
                    flags: WdFlags(
                        0x0,
                    ),
                },
            },
        ),
        nd_type: Command {
            argv: [
                Tk {
                    tk_type: Ident,
                    wd: WordDesc {
                        text: "cat",
                        span: Span {
                            start: 0,
                            end: 3,
                        },
                        flags: WdFlags(
                            0x0,
                        ),
                    },
                },
                Tk {
                    tk_type: String,
                    wd: WordDesc {
                        text: "nonexistantfile.txt",
                        span: Span {
                            start: 4,
                            end: 23,
                        },
                        flags: WdFlags(
                            IS_ARG,
                        ),
                    },
                },
            ],
        },
        span: Span {
            start: 0,
            end: 23,
        },
        flags: NdFlags(
            VALID_OPERAND,
        ),
        redirs: [
            Node {
                command: None,
                nd_type: Redirection {
                    redir: Redir {
                        fd_source: 1,
                        op: Output,
                        fd_target: Some(
                            2,
                        ),
                        file_target: None,
                    },
                },
                span: Span {
                    start: 24,
                    end: 28,
                },
                flags: NdFlags(
                    IS_OP,
                ),
                redirs: [],
            },
            Node {
                command: None,
                nd_type: Redirection {
                    redir: Redir {
                        fd_source: 2,
                        op: Output,
                        fd_target: None,
                        file_target: Some(
                            Tk {
                                tk_type: String,
                                wd: WordDesc {
                                    text: "file.txt",
                                    span: Span {
                                        start: 32,
                                        end: 40,
                                    },
                                    flags: WdFlags(
                                        IS_ARG,
                                    ),
                                },
                            },
                        ),
                    },
                },
                span: Span {
                    start: 29,
                    end: 31,
                },
                flags: NdFlags(
                    IS_OP,
                ),
                redirs: [],
            },
        ],
    },
]
