src/interp/snapshots/rsh__interp__parse__test__parser_redirection_simple.snap
---
source: src/interp/parse.rs
expression: flat_nodes
---
[
    Node {
        command: Some(
            Tk {
                tk_type: Ident,
                wd: WordDesc {
                    text: "echo",
                    span: Span {
                        start: 0,
                        end: 4,
                    },
                    flags: WdFlags(
                        BUILTIN,
                    ),
                },
            },
        ),
        nd_type: Builtin {
            argv: [
                Tk {
                    tk_type: Ident,
                    wd: WordDesc {
                        text: "echo",
                        span: Span {
                            start: 0,
                            end: 4,
                        },
                        flags: WdFlags(
                            BUILTIN,
                        ),
                    },
                },
                Tk {
                    tk_type: String,
                    wd: WordDesc {
                        text: "hello",
                        span: Span {
                            start: 5,
                            end: 10,
                        },
                        flags: WdFlags(
                            IS_ARG,
                        ),
                    },
                },
                Tk {
                    tk_type: String,
                    wd: WordDesc {
                        text: "world",
                        span: Span {
                            start: 11,
                            end: 16,
                        },
                        flags: WdFlags(
                            IS_ARG,
                        ),
                    },
                },
            ],
        },
        span: Span {
            start: 0,
            end: 16,
        },
        flags: NdFlags(
            VALID_OPERAND,
        ),
        redirs: [
            Node {
                command: None,
                nd_type: Redirection {
                    redir: Redir {
                        fd_source: 1,
                        op: Output,
                        fd_target: None,
                        file_target: Some(
                            Tk {
                                tk_type: String,
                                wd: WordDesc {
                                    text: "file.txt",
                                    span: Span {
                                        start: 19,
                                        end: 27,
                                    },
                                    flags: WdFlags(
                                        IS_ARG,
                                    ),
                                },
                            },
                        ),
                    },
                },
                span: Span {
                    start: 17,
                    end: 18,
                },
                flags: NdFlags(
                    IS_OP,
                ),
                redirs: [],
            },
        ],
    },
]
